<resources>
    <string name="app_name">MasCheap</string>
    <string name="login">Iniciar Sesión</string>
    <string name="email">Email</string>
    <string name="correo">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="mostrar"> Mostrar contraseña</string>
    <string name="enter">Entrar</string>
    <string name="registro">Registro</string>
    <string name="crearCuenta">Crear cuenta</string>
    <string name="clicLogin">Haga clic aquí para crear una cuenta</string>
    <string name="clicRegistro">Haga clic aquí para iniciar sesión</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="user">Usuario</string>
    <string name="hyperlink"><a href="https://www.mercadona.es/">Haga clic aqui</a></string>
    <string name="aportaOferta">Aportar oferta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>